examples/ex3/test_cases/failing/check11_primitive_var_is_calling_method.java
class Main {
    public static void main(String[] a) {
        System.out.println(3);
    }
}

class Simple {
    int num;

    public int runFuct() {
        return 0;
    }

    public int func() {
        int bar;

        num = 5;
        bar = num.runFunc();

        return 0;
    }
}